use getConstructor().newInstance() instead of only newInstance() (java 9+ deprecated API)